# marek_live_caption

./: .gitignore  Cargo.toml
src/: audio_recognizer.rs  main.rs  main_view_model.rs
