[package]
name = "marek_live_caption"
version = "1.0.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Desktop live capture application"
keywords = ["speech", "recognition", "api", "captions"]
categories = ["accessibility", "multimedia::audio"]
repository = "https://github.com/marek-g/marek_live_caption"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
fui_core = "0.15"
fui_controls = "0.15"
fui_macros = "0.4"
fui_app = "0.16"
fui_system = "0.14"
fui_system_core = "0.13"
typemap = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
marek_speech_recognition_api = { version = "2.1", path = "../marek_speech_recognition/marek_speech_recognition_api" }
marek_google_speech_recognition = { version = "2.1", path = "../marek_speech_recognition/marek_google_speech_recognition" }
marek_vosk_speech_recognition = { version = "2.1", path = "../marek_speech_recognition/marek_vosk_speech_recognition" }
marek_translate_api = "1.0"
marek_translate_locally = "1.0.1"
cpal = "0.14"
dasp_sample = "0.11"
